added directions to isVisible to test it with more detail